mfd: arizona: Add support for cs47l15
Change-Id: I41002bb326553be2c0ae4b5ca9d8354cd10784f0
Signed-off-by: Richard Fitzgerald <rf@opensource.wolfsonmicro.com>

--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -61,6 +61,9 @@ endif
 ifeq ($(CONFIG_MFD_MOON), y)
 obj-$(CONFIG_MFD_ARIZONA)	+= moon-tables.o
 endif
+ifeq ($(CONFIG_MFD_CS47L15),y)
+obj-$(CONFIG_MFD_ARIZONA)	+= cs47l15-tables.o
+endif
 obj-$(CONFIG_MFD_WM8400)	+= wm8400-core.o
 wm831x-objs			:= wm831x-core.o wm831x-irq.o wm831x-otp.o
 wm831x-objs			+= wm831x-auxadc.o
