--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -1083,6 +1083,15 @@ config MFD_MARLEY
 	help
 	  Support for Cirrus Logic Marley low power audio SoC
 
+config MFD_CS47L15
+	bool "Cirrus Logic CS47L15"
+	depends on MFD_ARIZONA
+	help
+	  Support for Cirrus Logic CS47L15 low power audio SoC.
+	  This driver provides common support for accessing the codec.
+	  Additional drivers must be enabled in order to use the
+	  functionality of the codec.
+
 config MFD_WM8400
 	bool "Wolfson Microelectronics WM8400"
 	select MFD_CORE
