--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -87,6 +87,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_CLEARWATER if MFD_CLEARWATER
 	select SND_SOC_MARLEY if MFD_MARLEY
 	select SND_SOC_MOON if MFD_MOON
+	select SND_SOC_CS47L15 if MFD_CS47L15
 	select SND_SOC_WM8350 if MFD_WM8350
 	select SND_SOC_WM8400 if MFD_WM8400
 	select SND_SOC_WM8510 if SND_SOC_I2C_AND_SPI
@@ -155,6 +156,7 @@ config SND_SOC_ARIZONA
 	default y if SND_SOC_WM8997=y
 	default y if SND_SOC_VEGAS=y
 	default y if SND_SOC_LARGO=y
+	default y if SND_SOC_CS47L15=y
 	default m if SND_SOC_WM5102=m
 	default m if SND_SOC_FLORIDA=m
 	default m if SND_SOC_CLEARWATER=m
@@ -163,6 +165,7 @@ config SND_SOC_ARIZONA
 	default m if SND_SOC_WM8997=m
 	default m if SND_SOC_VEGAS=m
 	default m if SND_SOC_LARGO=m
+	default m if SND_SOC_CS47L15=m
 
 config SND_SOC_WM_HUBS
 	tristate
@@ -419,6 +422,9 @@ config SND_SOC_MARLEY
 	tristate
 
 config SND_SOC_MOON
+	tristate
+
+config SND_SOC_CS47L15
 	tristate
 
 config SND_SOC_WM8350
