--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -79,6 +79,7 @@ snd-soc-florida-objs := florida.o
 snd-soc-clearwater-objs := clearwater.o
 snd-soc-marley-objs := marley.o
 snd-soc-moon-objs := moon.o
+snd-soc-cs47l15-objs := cs47l15.o
 snd-soc-wm8350-objs := wm8350.o
 snd-soc-wm8400-objs := wm8400.o
 snd-soc-wm8510-objs := wm8510.o
@@ -208,6 +209,7 @@ obj-$(CONFIG_SND_SOC_FLORIDA)	+= snd-soc-florida.o
 obj-$(CONFIG_SND_SOC_CLEARWATER)	+= snd-soc-clearwater.o
 obj-$(CONFIG_SND_SOC_MARLEY)	+= snd-soc-marley.o
 obj-$(CONFIG_SND_SOC_MOON)	+= snd-soc-moon.o
+obj-$(CONFIG_SND_SOC_CS47L15)	+= snd-soc-cs47l15.o
 obj-$(CONFIG_SND_SOC_WM8350)	+= snd-soc-wm8350.o
 obj-$(CONFIG_SND_SOC_WM8400)	+= snd-soc-wm8400.o
 obj-$(CONFIG_SND_SOC_WM8510)	+= snd-soc-wm8510.o
