--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -679,6 +679,7 @@ config SND_SOC_CS35L45_SPI
 	depends on SPI_MASTER
 	select REGMAP
 	select REGMAP_SPI
+	select REGMAP_IRQ
 	select SND_SOC_CS35L45_TABLES
 	select SND_SOC_CS35L45
 	help
@@ -690,6 +691,7 @@ config SND_SOC_CS35L45_I2C
 	depends on I2C
 	select REGMAP
 	select REGMAP_I2C
+	select REGMAP_IRQ
 	select SND_SOC_CS35L45_TABLES
 	select SND_SOC_CS35L45
 	help
